# aoc

./: .gitignore  CMakeLists.txt  aoc.cabal  flake.nix
.cache/clangd/index/: Day8.cpp.13B1FAA42E1A9A23.idx
app/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day8.cpp
