cabal-version:      3.0
name:               aoc
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://skade.dev
license-file:       LICENSE
author:             Thomas Jensen
maintainer:         mast3r@skade.dev
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day1
    import:           warnings
    main-is:          Day1.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    import:           warnings
    main-is:          Day2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        split
    hs-source-dirs:   app
    default-language: Haskell2010

executable day3
    import: warnings
    main-is: Day3.hs
    build-depends:
        base
    hs-source-dirs: app
    default-language: Haskell2010
